modified the pdf

--- a/lucrare/carte/carte.tex
+++ b/lucrare/carte/carte.tex
@@ -129,14 +129,14 @@
 \addcontentsline{toc}{chapter}{Contribuții}
 
 %{\setstretch{1.0}
-\chapter{Point in time recovery}
+\chapter{Studiu \textit{point in time recovery}}
 \input{chapters/PITR}
 %}
 
-\chapter{Logical Volume Manager (LVM)}
+\chapter{Studiu \textit{Logical Volume Manager (LVM)}}
 \input{chapters/LVM}
 
-\chapter{Database Point in time recovery Manager}
+\chapter{Arhitectura sistemului de fișiere}
 \input{chapters/Arhitectura}
 
 \chapter{DevOps as a Service}
